--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
         "target": "es5",
         "noImplicitAny": true,
         "sourceMap": true,
-        "noEmitOnError": false
+        "noEmitOnError": false,
+        "strictNullChecks": true,
+        "noUnusedParameters": true
     },
     "exclude": [
         "node_modules"
